implements test terrain, begins player

--- a/flutter-games-basic/pubspec.yaml
+++ b/flutter-games-basic/pubspec.yaml
@@ -35,6 +35,9 @@ flutter:
     - assets/images/
     - assets/music/
     - assets/sfx/
+    - assets/tiles/
+    - assets/images/terrains/test-terrain.png
+    
 
   fonts:
     - family: Permanent Marker
