--- a/flutter-games-basic/pubspec.yaml
+++ b/flutter-games-basic/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   location: ^7.0.1
   http: ^1.2.2
   nes_ui: ^0.20.0
+  flame_audio: ^2.10.6
 
 dev_dependencies:
   flutter_lints: ^5.0.0
@@ -45,6 +46,8 @@ flutter:
     - assets/images/player_sprites/lil_dude/lil-dude-running.png
     - assets/images/item/item.png
     - assets/images/boss/boss.png
+    - assets/audio/jump.wav
+    - assets/audio/powerUp.wav
     
 
   fonts:
